[package]
name = "camera"
version = "0.1.0"
edition = "2021"
description = "Camera Interface for multiple camera types"
readme = "README.md"
licence = "MIT"
license-file = "LICENSE"


# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "camera"


[profile.test]
opt-level = 3

[dependencies]
rgb = "0.8.50"
libc = "0.2.169"
thiserror = "2.0.11"
chrono = "0.4.39"
png = "0.17.16"
num-traits = "0.2.19"
rand = "0.9.0"
rand_distr = "0.5.0"
bytemuck = "1.7.0"


[features]
svbony = []
